<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dip"
        android:gravity="center" >
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="20sp" />
        
	    <TimePicker
	        android:id="@+id/timePicker"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dip"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/receiver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:layout_marginLeft="10dip"
            android:textOff="@string/member"
            android:textOn="@string/leader" />

    </LinearLayout>

</LinearLayout>
