<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editNick"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:gravity="center"
	    android:padding="20dp" >
        
        <Button
	        android:id="@+id/timer_settings"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center"
	        android:background="@drawable/bg_sand"
	        android:alpha="0.8"
	        android:text="@string/timer_settings"
	        android:textSize="24sp"
	        android:textColor="@color/black" />
	    
	    <ToggleButton
	        android:id="@+id/timer_toggle"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:layout_marginLeft="5dp"
	        android:textOff="@string/off"
	        android:textOn="@string/on" />
        
    </LinearLayout>
    
    <Button
        android:id="@+id/back"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="20dp"
        android:background="@drawable/bg_sand"
        android:alpha="0.8"
        android:text="@string/back"
        android:textSize="24sp"
        android:textColor="@color/black" />

</LinearLayout>
