<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.7" />

    <LinearLayout
        android:id="@+id/addField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <EditText
                android:id="@+id/newNumber"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone" />
            
            <EditText
                android:id="@+id/newName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/plusButton"
                android:layout_toRightOf="@+id/newNumber"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text" />

            <Button
                android:id="@+id/plusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:drawable/ic_menu_add" />
        </RelativeLayout>

        <Button
            android:id="@+id/from_contact"
            android:layout_width="match_parent"
            android:layout_height="40dp"
	        android:layout_gravity="center_horizontal"
	      	android:paddingLeft="10dp"
	      	android:paddingRight="10dp"
	        android:layout_margin="10dp"
	        android:alpha="0.8"
	        android:background="@drawable/bg_sand"
            android:text="@string/from_contact"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/finish"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:alpha="0.8"
        android:background="@drawable/bg_sand"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/finish"
        android:textColor="@color/black"
        android:textSize="24sp" />

</LinearLayout>